# QuillBot

./: file  file.asm  file.c  file.qyl  index.js  keep-alive.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.qyl  wasm.py
Quill/: main.py
Quill/src/: data.py  parse.py  runner.py
src/: array.py  data.py  errors.py  runner.py
stdlib/: crypto.py  fs.qyl  http.py  json.py  math.qyl  plot.py  random.py  socket.qyl  stdio.qyl  stego.py  subprocess.py  ziplib.py
